monticore-generator/src/test/resources/cocos/invalid/A4026/A4026.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4026;

grammar A4026  {
  token CARDINALITY = ('0'..'9')+ | '*' :
  x -> int : { // Java code:
  if (x.equals(" * "))
  return -1;
  else
  return Integer.parseInt(x.getText());
  };

}
